# comfyui-koukoutu

./: .gitignore  LICENSE  README.md  __init__.py  config.py  install.bat  install.sh  node_config.json  pyproject.toml  requirements.txt  utils.py
.github/workflows/: publish_action.yml
nodes/: __init__.py  ai_shadow.py  background_removal.py  image_extract.py  image_extract_v2.py  image_to_image.py  outpaint.py  stamp_crop.py  upscale.py  watermark_removal.py
workflows/: image-extract-v2.json  image-extract.json  image-shadow-v3.json  image-to-image.json  image-watermark.json  koukoutu_workflow.json  stamp_crop.json  upscale2stamp.json  抠图.json
